--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -1,15 +1,20 @@
 services:
-  database:
-    image: postgres
+  pg_database:
+    container_name: pg_database
     environment:
       POSTGRES_PASSWORD: 123
-    volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      DATABASE_HOST: pg_database
+    image: postgres:alpine
     ports:
-      - "5432:5432"
+      - 5432:5432
+    volumes:
+      - ./pg_data:/var/lib/postgresql/data
+
   server:
     build: .
+    container_name: server
     depends_on:
-      - database
+      - pg_database
     ports:
-      - "3001:3001"
+      - 3001:3001
+    restart: on-failure
