--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
         "preset": "jest-expo"
     },
     "dependencies": {
-        "react-native-reanimated": "^2.14.4",
+        "react-native-reanimated": "~2.14.4",
         "react-native-svg": "13.4.0",
         "@expo/vector-icons": "^13.0.0",
         "@react-navigation/native": "^6.0.2",
