--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,5 +8,6 @@
             "@assets/*": ["./assets/*"],
             "@app/*": ["./app/*"]
         }
-    }
+    },
+    "exclude": ["node_modules", "*.config.js"]
 }
