--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
+        "babel-plugin-module-resolver": "^5.0.0",
         "@types/react": "~18.0.14",
         "jest": "^29.2.1",
         "jest-expo": "~48.0.0",
