--- a/app/package.json
+++ b/app/package.json
@@ -13,10 +13,9 @@
         "preset": "jest-expo"
     },
     "dependencies": {
-        "react-native-reanimated": "~2.14.4",
-        "react-native-svg": "13.4.0",
         "@expo/vector-icons": "^13.0.0",
         "@react-navigation/native": "^6.0.2",
+        "@tanstack/react-query": "^4.29.12",
         "expo": "~48.0.15",
         "expo-font": "~11.1.1",
         "expo-linking": "~4.0.1",
@@ -28,14 +27,17 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.71.8",
+        "react-native-reanimated": "~2.14.4",
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
-        "react-native-web": "~0.18.10"
+        "react-native-svg": "13.4.0",
+        "react-native-web": "~0.18.10",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
-        "babel-plugin-module-resolver": "^5.0.0",
         "@types/react": "~18.0.14",
+        "babel-plugin-module-resolver": "^5.0.0",
         "jest": "^29.2.1",
         "jest-expo": "~48.0.0",
         "prettier": "^2.8.8",
