--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,10 +1,14 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["./src/*"]
+    "extends": "expo/tsconfig.base",
+    "compilerOptions": {
+        "strict": true,
+        "baseUrl": ".",
+        "paths": {
+            "@screens/*": ["./screens/*"],
+            "@assets/*": ["./assets/*"],
+            "@app/*": ["./app/*"],
+            "@utils/*": ["./utils/*"]
+        }
     },
-    "strict": true
-  }
+    "exclude": ["node_modules", "*.config.js"]
 }
