--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
         "expo-web-browser": "~12.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.44.2",
         "react-native": "0.71.8",
         "react-native-reanimated": "~2.14.4",
         "react-native-safe-area-context": "4.5.0",
