--- a/app/package.json
+++ b/app/package.json
@@ -1,52 +1,53 @@
 {
-    "name": "summar",
-    "version": "1.0.0",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "test": "jest --watchAll",
-        "format": "prettier --write ."
-    },
-    "jest": {
-        "preset": "jest-expo"
-    },
-    "dependencies": {
-        "@expo/vector-icons": "^13.0.0",
-        "@react-navigation/native": "^6.0.2",
-        "@tanstack/react-query": "^4.29.12",
-        "expo": "~48.0.15",
-        "expo-font": "~11.1.1",
-        "expo-linking": "~4.0.1",
-        "expo-router": "^1.5.2",
-        "expo-splash-screen": "~0.18.2",
-        "expo-status-bar": "~1.4.4",
-        "expo-system-ui": "~2.2.1",
-        "expo-web-browser": "~12.1.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-hook-form": "^7.44.2",
-        "react-native": "0.71.8",
-        "react-native-reanimated": "~2.14.4",
-        "react-native-safe-area-context": "4.5.0",
-        "react-native-screens": "~3.20.0",
-        "react-native-web": "~0.18.10",
-        "zod": "^3.21.4"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@types/react": "~18.0.14",
-        "babel-plugin-module-resolver": "^5.0.0",
-        "jest": "^29.2.1",
-        "jest-expo": "~48.0.0",
-        "prettier": "^2.8.8",
-        "react-test-renderer": "18.2.0",
-        "typescript": "^4.9.4"
-    },
-    "private": true,
-    "overrides": {
-        "metro": "0.76.0",
-        "metro-resolver": "0.76.0"
-    }
+  "name": "summar",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll",
+    "format": "prettier --write ."
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^4.29.12",
+    "expo": "~48.0.15",
+    "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.2",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-web-browser": "~12.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
+    "react-native": "0.71.8",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10",
+    "zod": "^3.21.4",
+    "expo-constants": "~14.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.14",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~48.0.0",
+    "prettier": "^2.8.8",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^4.9.4"
+  },
+  "private": true,
+  "overrides": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
+  }
 }
