--- a/app/package.json
+++ b/app/package.json
@@ -26,13 +26,14 @@
         "expo-web-browser": "~12.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.44.2",
         "react-native": "0.71.8",
         "react-native-reanimated": "~2.14.4",
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
-        "react-native-svg": "13.4.0",
         "react-native-web": "~0.18.10",
-        "zod": "^3.21.4"
+        "zod": "^3.21.4",
+        "expo-constants": "~14.2.1"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
