--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
         "@react-navigation/native": "^6.0.2",
         "@tanstack/react-query": "^4.29.12",
         "expo": "~48.0.15",
+        "expo-constants": "~14.2.1",
         "expo-font": "~11.1.1",
         "expo-linking": "~4.0.1",
         "expo-router": "^1.5.2",
@@ -29,12 +30,12 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.44.2",
         "react-native": "0.71.8",
+        "react-native-gesture-handler": "~2.9.0",
         "react-native-reanimated": "~2.14.4",
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
         "react-native-web": "~0.18.10",
-        "zod": "^3.21.4",
-        "expo-constants": "~14.2.1"
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
