--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,8 @@
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
         "react-native-web": "~0.18.10",
-        "zod": "^3.21.4"
+        "zod": "^3.21.4",
+        "react-native-webview": "11.26.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
