--- a/app/package.json
+++ b/app/package.json
@@ -36,8 +36,9 @@
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
         "react-native-web": "~0.18.10",
+        "react-native-webview": "11.26.0",
         "zod": "^3.21.4",
-        "react-native-webview": "11.26.0"
+        "zustand": "^4.3.8"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
